implement firebase login (email & google) and logout

--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
     "daisyui": "^5.0.43",
+    "firebase": "^11.9.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.2",
-    "sweetalert2": "^11.22.0",
+    "sweetalert2": "^11.6.13",
     "tailwindcss": "^4.1.10",
     "theme-change": "^2.5.0"
   },
