--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.2",
+    "react-tooltip": "^5.29.1",
     "sweetalert2": "^11.6.13",
     "tailwindcss": "^4.1.10",
     "theme-change": "^2.5.0"
