--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router": "^7.6.2",
     "react-tooltip": "^5.29.1",
     "sweetalert2": "^11.6.13",
+    "swiper": "^11.2.8",
     "tailwindcss": "^4.1.10",
     "theme-change": "^2.5.0"
   },
