--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^11.9.1",
     "motion": "^12.19.1",
     "react": "^19.1.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
