rename local folder and deploy to netlify

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "a11-bhugoal-client-side",
+  "name": "bhugoal-client",
   "private": true,
   "version": "0.0.0",
   "type": "module",
