--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.10.0",
     "daisyui": "^5.0.43",
     "firebase": "^11.9.1",
+    "lottie-react": "^2.4.1",
     "motion": "^12.19.1",
     "react": "^19.1.0",
     "react-datepicker": "^8.4.0",
